View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0033703 | Community | OCCT:Data Exchange | public | 2024-05-12 13:39 | 2024-09-08 13:19 |
Reporter | dsa-t | Assigned To | bugmaster | ||
Priority | normal | Severity | integration request | ||
Status | verified | Resolution | fixed | ||
Platform | Windows | OS | VC++ 2022 | ||
Product Version | 7.8.0 | ||||
Target Version | 7.9.0 | Fixed in Version | 7.9.0 | ||
Summary | 0033703: Data Exchange, Step Export - Transfer edge speed improvement | ||||
Description | While profiling, I've noticed that in TopoDSToStep_MakeStepEdge::Init, the face surface is always computed, but is only used in a code path that is never executed. The attached patch reduces STEPCAFControl_Writer transfer time by about 75% on my geometry. It is ok to push the patch without CLA. | ||||
Steps To Reproduce | Not required | ||||
Tags | No tags attached. | ||||
Test case number | none | ||||
Date Modified | Username | Field | Change |
---|---|---|---|
2024-05-12 13:39 | dsa-t | New Issue | |
2024-05-12 13:39 | dsa-t | Assigned To | => ika |
2024-05-12 13:39 | dsa-t | File Added: step-transfer-speed.patch | |
2024-05-13 12:20 | dpasukhi | Assigned To | ika => dpasukhi |
2024-05-13 12:20 | dpasukhi | Status | new => assigned |
2024-05-13 12:21 | dpasukhi | Summary | STEP writer transfer speed improvement (-75%) => Data Exchange - STEP writer transfer speed improvement (-75%) |
2024-05-13 12:24 | dpasukhi | Target Version | => 7.9.0 |
2024-09-06 23:21 | dpasukhi | Summary | Data Exchange - STEP writer transfer speed improvement (-75%) => Data Exchange, Step Export - Transfer edge speed improvement |
2024-09-06 23:27 | dpasukhi | Status | assigned => resolved |
2024-09-06 23:27 | dpasukhi | Steps to Reproduce Updated | |
2024-09-06 23:27 | dpasukhi | Note Added: 0116600 | |
2024-09-08 13:19 | dpasukhi | Assigned To | dpasukhi => bugmaster |
2024-09-08 13:19 | dpasukhi | Status | resolved => reviewed |
2024-09-08 13:19 | dpasukhi | Status | reviewed => verified |
2024-09-08 13:19 | dpasukhi | Resolution | open => fixed |
2024-09-08 13:19 | dpasukhi | Fixed in Version | => 7.9.0 |
2024-09-08 13:19 | dpasukhi | Test case number | => none |