0033703: Data Exchange, Step Export - Transfer edge speed improvement

Move optional code close to use case to avoid extra calculation